# dfvg

./: .gitignore  Auto_DFVG_Batcher.ps1  README.md  curl_output.txt  dfvg-api.spec  mkdocs.yml  pyproject.toml  run_server.py  test_api.py
.github/workflows/: release.yml
04_EXPORTS/: METADATA.csv
LOGS/: run_2026_02_12_201212.txt
dfvg/: __init__.py  __main__.py  cli.py  config.py  daemon.py  detect.py  drive_watcher.py  ffmpeg_wrapper.py  frame_extractor.py  image_processor.py  ingest.py  manifest.py  pack.py  report.py  rules.py  scene_detect.py  srt_parser.py  thumbnails.py  transcode.py
dfvg/api/: app.py  discovery.py  models.py  worker.py
docs/: api_reference.md  cli_usage.md  developer_guide.md  index.md  installation.md  mobile_app.md  web_interface.md  workflows.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.tsx  electron.d.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: ClipCard.tsx  ConfirmDialog.tsx  DriveCard.tsx  ErrorBoundary.tsx  IngestWizard.tsx  Layout.tsx  MobileConnect.tsx  (+6 more)
mobile/: App.tsx  app.json  eas.json  package-lock.json  package.json  tsconfig.json
mobile/android/: settings.gradle
site/: 404.html  index.html  sitemap.xml
site/api_reference/: index.html
site/cli_usage/: index.html
site/developer_guide/: index.html
site/installation/: index.html
site/mobile_app/: index.html
site/search/: search_index.json
site/web_interface/: index.html
site/workflows/: index.html
tests/: test_optimization.py
(+14 files in other folders)
